fixed not showing image

--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,44 @@
-body{
-    min-height: 3000px;
+body {
+  min-height: 3000px;
 }
-.jumbotron
-{
-    background-image: url(/img/bg.jpg);
-    padding-top: 5rem;
-    background-color: #66DE93;
-    padding-bottom: 22rem;
+.jumbotron {
+  padding-top: 5rem;
+  background-color: #66de93;
+  padding-bottom: 22rem;
 }
 
-#projects
-{
-    background-color: #66DE93;
+#projects {
+  background-color: #66de93;
 }
 
-
-section
-{
-    padding-top: 5rem;
+section {
+  padding-top: 5rem;
 }
 
-
-.nav-link
-{
-    margin-right: 17px;
+.nav-link {
+  margin-right: 17px;
 }
 
-
-.btn:hover{
-    background-color: tomato;
-    border-radius: 14px;
+.btn:hover {
+  background-color: tomato;
+  border-radius: 14px;
 }
 
-.nav-link:hover::after
-{
-    content: '';
-    display: block;
-    border-bottom: 3px solid #66DE93;
-    width: 50%;
-    margin: auto;
-    padding-bottom: 5px;
-    margin-bottom: -12px;
-
+.nav-link:hover::after {
+  content: "";
+  display: block;
+  border-bottom: 3px solid #66de93;
+  width: 50%;
+  margin: auto;
+  padding-bottom: 5px;
+  margin-bottom: -12px;
 }
 
-.kotak-aing
-
-{
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.5);
-    background-color: white;
-    margin-top: -300px;
-    padding: 20px;
-    border-radius: 10px;
-
+.kotak-aing {
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.5);
+  background-color: white;
+  margin-top: -300px;
+  padding: 20px;
+  border-radius: 10px;
 }
 /* <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L30,176C60,192,120,224,180,245.3C240,267,300,277,360,272C420,267,480,245,540,213.3C600,181,660,139,720,122.7C780,107,840,117,900,149.3C960,181,1020,235,1080,245.3C1140,256,1200,224,1260,213.3C1320,203,1380,213,1410,218.7L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg> */
